# app2fa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  tauri.conf.json
.claude/: settings.local.json
src/: commands.rs  crypto.rs  main.rs  migration.rs  models.rs  storage.rs  totp.rs
src/tauri/capabilities/: default.json
